tests/expectations/compiler/function/no_return.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:4:5
     |
   4 |     transition main() -> u8 {}
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
"""]
